// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Page > should render Page with header 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
        <a
          href="#"
        >
          Link1
        </a>
        <a
          href="#"
        >
          Link2
        </a>
      </div>
    </div>
    <div
      class="content contained centerAlign"
    >
      <div
        class="contentWrapper"
      >
        <div
          class="contentInner"
        >
          Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Page > should render Page with profile 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content contained centerAlign"
    >
      <div
        class="contentWrapper"
      >
        <div
          class="contentInner"
        >
          Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Page > should render contained Page 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content contained centerAlign"
    >
      <div
        class="contentWrapper"
      >
        <div
          class="contentInner"
        >
          Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Page > should render full bleed layout with full-width and full-height geometry 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header fullBleed"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullBleed centerAlign"
    >
      <div
        class="contentWrapper"
      >
        <div
          class="contentInner"
        >
          Content
        </div>
      </div>
    </div>
    <div
      class="footer fullBleed"
    >
      <a>
        Footer
      </a>
    </div>
  </div>
</div>
`;
